{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 20,
  "lineage": "5e837acc-abcc-d77f-92bf-e5e91969c960",
  "resources": [
    {
      "module": "module.benchmark_worker.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061abae72be9c5e7d",
            "arn": "arn:aws:ec2:us-west-2:627286350134:instance/i-028e3e0d10f4b5977",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028e3e0d10f4b5977",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.large",
            "ipv6_address_count": 0,
            "key_name": "jenkins_worker_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014a4ce820590a4d4",
            "private_dns": "ip-192-168-44-6.us-west-2.compute.internal",
            "private_ip": "192.168.44.6",
            "public_ip": "34.216.22.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03308eb7af8b47c58",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd9537893845475d",
            "tags": {
              "Name": "jenkins-worker",
              "Owner": "jenkins",
              "managed-by": "terraform"
            },
            "tags_all": {
              "Name": "jenkins-worker",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "managed-by": "terraform",
              "repo": "apm-server"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0ca610f8ddc5c2b98"
            ]
          },
          "dependencies": [
            "module.benchmark_worker.aws_key_pair.worker",
            "module.benchmark_worker.data.aws_ami.worker_ami",
            "module.benchmark_worker.module.vpc.aws_subnet.public",
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:security-group/sg-0ca610f8ddc5c2b98",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca610f8ddc5c2b98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "627286350134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:internet-gateway/igw-076957f7d32057fd9",
            "id": "igw-076957f7d32057fd9",
            "owner_id": "627286350134",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-076957f7d32057fd9",
            "id": "r-rtb-0d9f87da965197ff21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9f87da965197ff2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_internet_gateway.this",
            "module.benchmark_worker.module.vpc.aws_route_table.public",
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:route-table/rtb-0d9f87da965197ff2",
            "id": "rtb-0d9f87da965197ff2",
            "owner_id": "627286350134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker-public",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker-public",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04edc37480ec71f62",
            "route_table_id": "rtb-0d9f87da965197ff2",
            "subnet_id": "subnet-0dd9537893845475d"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_route_table.public",
            "module.benchmark_worker.module.vpc.aws_subnet.public",
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06363aa4879478d74",
            "route_table_id": "rtb-0d9f87da965197ff2",
            "subnet_id": "subnet-065087977707e912d"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_route_table.public",
            "module.benchmark_worker.module.vpc.aws_subnet.public",
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa7acecfa1d8099d",
            "route_table_id": "rtb-0d9f87da965197ff2",
            "subnet_id": "subnet-0c0c87497ff82984b"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_route_table.public",
            "module.benchmark_worker.module.vpc.aws_subnet.public",
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:subnet/subnet-0dd9537893845475d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.44.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd9537893845475d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627286350134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2a",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2a",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:subnet/subnet-065087977707e912d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.44.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065087977707e912d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627286350134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2b",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2b",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:subnet/subnet-0c0c87497ff82984b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.44.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0c87497ff82984b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627286350134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2c",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-worker-public-us-west-2c",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            },
            "vpc_id": "vpc-0773e21e854f1e817"
          },
          "dependencies": [
            "module.benchmark_worker.module.vpc.aws_vpc.this",
            "module.benchmark_worker.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.benchmark_worker.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:627286350134:vpc/vpc-0773e21e854f1e817",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.44.0/24",
            "default_network_acl_id": "acl-04275a333731f471b",
            "default_route_table_id": "rtb-02fd3116bc030c488",
            "default_security_group_id": "sg-0ca610f8ddc5c2b98",
            "dhcp_options_id": "dopt-d51a9ead",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0773e21e854f1e817",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fd3116bc030c488",
            "owner_id": "627286350134",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-jenkins-worker",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-jenkins-worker",
              "Owner": "jenkins",
              "branch": "benchmarks_2_job",
              "build": "1",
              "environment": "ci",
              "repo": "apm-server"
            }
          }
        }
      ]
    }
  ]
}